# libpmsdl

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  vcpkg.json
Example/: main.cpp  renderer.cpp  renderer.h
Example/Content/: map.p8m
LibP8M/include/p8m/: map.h
LibP8M/source/: map.cpp
